--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td><h1>Aviner Escobar</h1>
       <p><em><strong>MSc in Sociology</strong> - Universidade Nova de Lisboa</em></p>
       <p><em><strong>Senior Process Executive</strong> - Cognizant</em></p>
-      <p>Since 2019 working in Customer Support related positions in Business Process Outsourcing and IT companies for Big Techs clients.
+      <p>Since 2019 working in Customer Support related positions in Business Process Outsourcing and IT companies for Big Tech's clients.
      <br>I also have more than five years of experience as a political analyst.</br>
      Born in Rio de Janeiro - Brazil, living for  approximately 3 years in Lisbon - Portugal.</p></td>
          </tr>
